photobox spacing fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
 /* Header */
 
 header {
-    padding: 10px 35px;
+    padding: 10px 0 10px 0;
     background-color: var(--secondary-color);
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     display: flex;
@@ -26,7 +26,7 @@ header h1 {
     background-color: var(--primary-color);
     margin: 0;
     color: var(--secondary-color);
-    padding: 0 4rem;
+    padding: 0 15px 0 70px;
 }
 
 header nav {
@@ -44,7 +44,7 @@ header nav ul {
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
-    font-size: 1.55vw;
+    font-size: 20px;
     color: var(--primary-color);
 }
 
@@ -84,9 +84,10 @@ header nav ul li a {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: var(--secondary-color);
     text-align: right;
-    width: 50%;
-    padding: 10px;
-    margin: 5px 0;
+    padding: 0 10px;
+    border-right: 4px var(--secondary-color);
+    border-right-style: solid;
+    height: 100%;
 }
 
 .column img {
@@ -106,7 +107,7 @@ header nav ul li a {
 .photo-boxes {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 1rem;
+    gap: 10px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     color: var(--secondary-color);
 }
@@ -115,8 +116,9 @@ header nav ul li a {
     grid-column: 1/3;
     background-image: url("../images/download.jpg");
     height: 200px;
-    width: 900px;
-    border: var(--primary-color) 20px;
+    width: 84%;
+    border: var(--primary-color) solid 2px;
+    margin-left: 10px;
 }
 
 .main-container1 {
@@ -128,14 +130,40 @@ header nav ul li a {
 
 .small-container1 {
     background-image: url("../images/download-1.jpg");
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: right;
+    flex-wrap: wrap;
+    border: var(--primary-color) solid 2px;
+    margin-left: 10px;
+    width: 70%;
+    height: 100px;
 }
 
 .small-container2 {
     background-image: url("../images/images.jpg");
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: right;
+    flex-wrap: wrap;
+    border: var(--primary-color) solid 2px;
+    width: 70%;
+    height: 100px;
 }
 
 .small-container3 {
     background-image: url("../images/download-2.jpg");
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: right;
+    flex-wrap: wrap;
+    border: var(--primary-color) solid 2px;
+    margin-left: 10px;
+    width: 70%;
+    height: 100px;
 }
 
 .small-container4 {
@@ -146,10 +174,45 @@ header nav ul li a {
     justify-content: right;
     flex-wrap: wrap;
     height: 85px;
+    border: var(--primary-color) 20px;
+    width: 70%;
+    height: 100px;
 }
 
-.small-container1-sub, .small-container2-sub, .small-container3-sub, .small-container4-sub {
+.small-container1-sub, .small-container3-sub{
     background-color: var(--primary-color);
+    color: var(--secondary-color);
+    position: absolute;
+    margin-top: 25px;
+    margin-right: 230px;
+    padding: 5px;
+}
+
+.small-container2-sub {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    position: absolute;
+    margin-top: 25px;
+    margin-right: 150px;
+    padding: 5px;
+}
+
+.small-container3-sub {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    position: absolute;
+    margin-top: 25px;
+    margin-right: 180px;
+    padding: 5px;
+}
+
+.small-container4-sub {
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    position: absolute;
+    margin-top: 25px;
+    margin-right: 215px;
+    padding: 5px;
 }
 
 /* Contact Me Section */
